# app/Http/Controllers/FileController.php
@@ -5,8 +5,39 @@ namespace App\Http\Controllers;
 use App\Models\Image;
 use Illuminate\Http\Request;
 
+/**
+
+ *
+ * @OA\Server(url="http://localhost")
+ */
+
 class FileController extends Controller
 {
+
+             /**
+     * @OA\Post(
+     *     path="/api/files/setProfilePhoto",
+     *     summary="Metodo para subir fotos",
+
+     *     @OA\Parameter(
+     *          name="",
+     *          in="path",
+     * 
+     *     @OA\Schema(
+     *         type="id",
+     *     )),      
+     *     @OA\Response(
+     *         response=200,
+     *         description="Metodo para subir fotos"
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *     )
+     * )
+     */
+
+
     protected function setProfilePhoto(Request $request)
     {
         Image::updateOrInsert(
@@ -14,6 +45,31 @@ class FileController extends Controller
             ['image' => $request->img,]
         );
     }
+
+    
+             /**
+     * @OA\Post(
+     *     path="/api/files/getProfilePhoto",
+     *     summary="Devuelve las imagenes de los usuarios",
+
+     *     @OA\Parameter(
+     *          name="",
+     *          in="path",
+     * 
+     *     @OA\Schema(
+     *         type="id",
+     *     )),      
+     *     @OA\Response(
+     *         response=200,
+     *         description="Devuelve las imagenes de los usuarios"
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *     )
+     * )
+     */
+
 
     protected function getProfilePhoto(Request $request)
     {
@@ -23,6 +79,7 @@ class FileController extends Controller
             ->get();
     }
 
+   
     protected function uploadImgae(Request $request)
     {
         Image::insert([
@@ -31,6 +88,9 @@ class FileController extends Controller
             'image' => $request->img,
         ]);
     }
+
+
+
 
     protected function getImage(Request $request)
     {
